Bug 508517 - Windows dimmed with effects are brighter with software brightness control
Summary: Windows dimmed with effects are brighter with software brightness control
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.4.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-20 13:06 UTC by Tech-Tac
Modified: 2025-10-20 11:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tech-Tac 2025-08-20 13:06:14 UTC
SUMMARY
Windows dimmed via either the Dialog Parent or Dim Inactive effects appear noticeably brighter when lowering the screen brightness below 100% with a monitor/connection that doesn't expose hardware brightness control to the system.

STEPS TO REPRODUCE
1. Set screen brightness to 100%
2. Enable Dim Inactive effect and open multiple windows
3. Lower screen brightness by 1% (or more)

OBSERVED RESULT
The inactive windows dimmed by the effect get a little less dimmer despite everything else getting +1% more dim.
They continue to get dimmer as expected from this point downwards, but with their baseline brightness is slightly higher.

EXPECTED RESULT
Windows don't go slightly brighter below 99% as opposed to full brightness and scale brightness uniformly with the rest of the screen.

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Comment 1 Bug Janitor Service 2025-10-13 15:14:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8244
Comment 2 Zamundaaa 2025-10-17 12:06:59 UTC
Git commit 37ae2f1bd1182667b84752b393992c4be6b27002 by Xaver Hugl.
Committed on 17/10/2025 at 11:13.
Pushed by zamundaaa into branch 'master'.

scene/itemrenderer_opengl: always apply modulation and saturation in linear

Otherwise it can look different just depending on whether or not other color
management steps happen to be applied

M  +7    -2    src/scene/itemrenderer_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/37ae2f1bd1182667b84752b393992c4be6b27002
Comment 3 Zamundaaa 2025-10-20 11:18:11 UTC
Git commit aa1ed206446b904beb93d2ca5bd8aa77bbf1abed by Xaver Hugl.
Committed on 20/10/2025 at 11:17.
Pushed by zamundaaa into branch 'Plasma/6.5'.

scene/itemrenderer_opengl: always apply modulation and saturation in linear

Otherwise it can look different just depending on whether or not other color
management steps happen to be applied
(cherry picked from commit 37ae2f1bd1182667b84752b393992c4be6b27002)

M  +7    -2    src/scene/itemrenderer_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/aa1ed206446b904beb93d2ca5bd8aa77bbf1abed