scene/itemrenderer_opengl: always apply modulation and saturation in linear

Otherwise it can look different just depending on whether or not other color
management steps happen to be applied

BUG: 508517
(cherry picked from commit 37ae2f1bd1182667b84752b393992c4be6b27002)